--- a/src/css/partials/_variables.scss
+++ b/src/css/partials/_variables.scss
@@ -1,1 +1,2 @@
 $header-height: 250px;
+$footer-height: 100px;
